# RoboboatTest

./: README.md
Comp_2024/: OA_v2.py  (+10 more)
Comp_2024/GPS_Related_Tasks/install/task3/share/task3/: package.bash  package.dsv  package.sh  package.xml  package.zsh
Comp_2024/GPS_Related_Tasks/src/task1/: CMakeLists.txt  package.xml  setup.py
Comp_2024/GPS_Related_Tasks/src/task1/python/: MainControl.py  detector.py  dirtbag_behavior.py  dirtbag_behavior_v2.py  dirtbag_behavior_v3.py  dirtbag_behavior_v4.py  location_data.txt  location_data_task1_notime.txt  location_data_task1_time.txt
Comp_2024/GPS_Related_Tasks/src/task1/scripts/: MainControl.py  detector.py
ROS2_Imp/ros2_foxy/src/detector/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  detector.py  my_detector_logger_config.yaml  package.xml  rosidl_generator_c__arguments.json  rosidl_generator_cpp__arguments.json  rosidl_generator_py__arguments.json  rosidl_typesupport_c__arguments.json  rosidl_typesupport_cpp__arguments.json  rosidl_typesupport_fastrtps_c__arguments.json  rosidl_typesupport_fastrtps_cpp__arguments.json  rosidl_typesupport_introspection_c__arguments.json  rosidl_typesupport_introspection_cpp__arguments.json
ROS2_Imp/ros2_foxy/src/detector/ament_cmake_core/stamps/: ament_cmake_export_targets-extras.cmake.stamp  rosidl_cmake-extras.cmake.stamp
ROS2_Imp/ros2_foxy/src/detector/ament_cmake_environment_hooks/: local_setup.sh  package.dsv
ROS2_Imp/ros2_foxy/src/detector/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
ROS2_Imp/ros2_foxy/src/detector/detector__py/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ROS2_Imp/ros2_foxy/src/detector/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ROS2_Imp/ros2_foxy/src/detector/install/detector/include/detector/: .YOLOv5Detection.hpp.swp
ROS2_Imp/ros2_foxy/src/detector/install/detector/include/detector/msg/: my_custom_msg.h  my_custom_msg.hpp  my_custom_msg_detector.h  my_custom_msg_detector.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h  yol_ov5helper.h  yol_ov5helper.hpp
ROS2_Imp/ros2_foxy/src/detector/install/detector/include/detector/msg/detail/: my_custom_msg__builder.hpp  my_custom_msg__functions.h  my_custom_msg__rosidl_typesupport_fastrtps_c.h  my_custom_msg__rosidl_typesupport_fastrtps_cpp.hpp  my_custom_msg__rosidl_typesupport_introspection_c.h  my_custom_msg__rosidl_typesupport_introspection_cpp.hpp  my_custom_msg__struct.h  my_custom_msg__struct.hpp  my_custom_msg__traits.hpp  my_custom_msg__type_support.h  my_custom_msg__type_support.hpp  my_custom_msg_detector__builder.hpp  my_custom_msg_detector__functions.h  my_custom_msg_detector__rosidl_typesupport_fastrtps_c.h  my_custom_msg_detector__struct.h  (+18 more)
ROS2_Imp/ros2_foxy/src/detector/install/detector/lib/detector/: detector_node
ROS2_Imp/ros2_foxy/src/detector/install/detector/share/detector/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml
ROS2_Imp/ros2_foxy/src/detector/install/detector/share/detector/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  detectorConfig-version.cmake  detectorConfig.cmake  detector__rosidl_typesupport_cExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
ROS2_Imp/ros2_foxy/src/detector/install/detector/share/detector/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
ROS2_Imp/ros2_foxy/src/detector/install/detector/share/detector/msg/: MyCustomMsg.idl  MyCustomMsg.msg  MyCustomMsgDetector.idl  MyCustomMsgDetector.msg  YOLOv5helper.idl  YOLOv5helper.msg
ROS2_Imp/ros2_foxy/src/detector/log/: latest_build
ROS2_Imp/ros2_foxy/src/detector/rosidl_adapter/: detector.idls
ROS2_Imp/ros2_foxy/src/detector/rosidl_adapter/detector/msg/: MyCustomMsg.idl
ROS2_Imp/ros2_foxy/src/detector/rosidl_cmake/: rosidl_cmake_export_typesupport_targets-extras.cmake
ROS2_Imp/ros2_foxy/src/detector/rosidl_generator_c/detector/msg/: rosidl_generator_c__visibility_control.h
ROS2_Imp/ros2_foxy/src/detector/rosidl_generator_cpp/detector/msg/detail/: my_custom_msg__struct.hpp
ROS2_Imp/ros2_foxy/src/detector/rosidl_generator_py/detector/: _detector_s.ep.rosidl_typesupport_introspection_c.c
ROS2_Imp/ros2_foxy/src/detector/rosidl_typesupport_c/detector/msg/: my_custom_msg__type_support.cpp
ROS2_Imp/ros2_foxy/src/detector/rosidl_typesupport_fastrtps_c/detector/msg/detail/: my_custom_msg__rosidl_typesupport_fastrtps_c.h
ROS2_Imp/ros2_foxy/src/detector/rosidl_typesupport_fastrtps_cpp/detector/msg/detail/dds_fastrtps/: my_custom_msg__type_support.cpp
ROS2_Imp/ros2_foxy/src/detector/src/: detector_node.cpp
(+1256 files in other folders)
